{
  "version": 4,
  "terraform_version": "1.15.6",
  "serial": 78,
  "lineage": "0e5585c3-0120-0dd7-fc53-e66bd70f79b7",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3ac65b5ae08df89",
            "arn": "arn:aws:ec2:us-east-1:015331669121:elastic-ip/eipalloc-0f3ac65b5ae08df89",
            "domain": "vpc",
            "id": "eipalloc-0f3ac65b5ae08df89",
            "network_border_group": "us-east-1",
            "private_dns": "ip-10-0-1-214.ec2.internal",
            "public_dns": "ec2-3-234-197-105.compute-1.amazonaws.com",
            "public_ip": "3.234.197.105",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Name": "wanderlust-nat-eip"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wanderlust-nat-eip",
              "Project": "wanderlust"
            },
            "vpc": true
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015331669121:internet-gateway/igw-0172db5cf7cf71f97",
            "id": "igw-0172db5cf7cf71f97",
            "owner_id": "015331669121",
            "tags": {
              "Name": "wanderlust-igw"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wanderlust-igw",
              "Project": "wanderlust"
            },
            "vpc_id": "vpc-0025f24f39cd9bcd7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0f3ac65b5ae08df89",
            "association_id": "eipassoc-01ccad899bffe747f",
            "connectivity_type": "public",
            "id": "nat-04a8f0968a9f89cd9",
            "network_interface_id": "eni-06fd3b18a371f7281",
            "private_ip": "10.0.1.74",
            "public_ip": "3.234.197.105",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-08307ba04f34e1e82",
            "tags": {
              "Name": "wanderlust-nat"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wanderlust-nat",
              "Project": "wanderlust"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015331669121:route-table/rtb-09b6e3f60aeafd826",
            "id": "rtb-09b6e3f60aeafd826",
            "owner_id": "015331669121",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-04a8f0968a9f89cd9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wanderlust-private-rt"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wanderlust-private-rt",
              "Project": "wanderlust"
            },
            "timeouts": null,
            "vpc_id": "vpc-0025f24f39cd9bcd7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015331669121:route-table/rtb-0c1f1af4b746d8da3",
            "id": "rtb-0c1f1af4b746d8da3",
            "owner_id": "015331669121",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0172db5cf7cf71f97",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "wanderlust-public-rt"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wanderlust-public-rt",
              "Project": "wanderlust"
            },
            "timeouts": null,
            "vpc_id": "vpc-0025f24f39cd9bcd7"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c944d130f5655f14",
            "route_table_id": "rtb-09b6e3f60aeafd826",
            "subnet_id": "subnet-0462ec6368a8a276d"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074b429e6b013af0e",
            "route_table_id": "rtb-09b6e3f60aeafd826",
            "subnet_id": "subnet-0c8c837feffb8b540"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_eip.nat",
            "aws_internet_gateway.main",
            "aws_nat_gateway.main",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0929d56cf54beaf81",
            "route_table_id": "rtb-0c1f1af4b746d8da3",
            "subnet_id": "subnet-08307ba04f34e1e82"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7eab29cdf66ea14",
            "route_table_id": "rtb-0c1f1af4b746d8da3",
            "subnet_id": "subnet-0648168ef4d8b9851"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015331669121:subnet/subnet-0462ec6368a8a276d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0462ec6368a8a276d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "015331669121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wanderlust-private-1",
              "kubernetes.io/cluster/wanderlust": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wanderlust-private-1",
              "Project": "wanderlust",
              "kubernetes.io/cluster/wanderlust": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0025f24f39cd9bcd7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015331669121:subnet/subnet-0c8c837feffb8b540",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c8c837feffb8b540",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "015331669121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wanderlust-private-2",
              "kubernetes.io/cluster/wanderlust": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wanderlust-private-2",
              "Project": "wanderlust",
              "kubernetes.io/cluster/wanderlust": "shared",
              "kubernetes.io/role/internal-elb": "1"
            },
            "vpc_id": "vpc-0025f24f39cd9bcd7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015331669121:subnet/subnet-08307ba04f34e1e82",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08307ba04f34e1e82",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "015331669121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wanderlust-public-1",
              "kubernetes.io/cluster/wanderlust": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wanderlust-public-1",
              "Project": "wanderlust",
              "kubernetes.io/cluster/wanderlust": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0025f24f39cd9bcd7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015331669121:subnet/subnet-0648168ef4d8b9851",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0648168ef4d8b9851",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "015331669121",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "wanderlust-public-2",
              "kubernetes.io/cluster/wanderlust": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wanderlust-public-2",
              "Project": "wanderlust",
              "kubernetes.io/cluster/wanderlust": "shared",
              "kubernetes.io/role/elb": "1"
            },
            "vpc_id": "vpc-0025f24f39cd9bcd7"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:015331669121:vpc/vpc-0025f24f39cd9bcd7",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-060678570b97fcf5a",
            "default_route_table_id": "rtb-0b1d6d08588057a64",
            "default_security_group_id": "sg-0f6a5681bd2f67fec",
            "dhcp_options_id": "dopt-087f87c0929311648",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0025f24f39cd9bcd7",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0b1d6d08588057a64",
            "owner_id": "015331669121",
            "tags": {
              "Name": "wanderlust-vpc"
            },
            "tags_all": {
              "ManagedBy": "terraform",
              "Name": "wanderlust-vpc",
              "Project": "wanderlust"
            }
          },
          "identity_schema_version": 0
        }
      ]
    }
  ]
}